--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,11 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Node.js
+/node_modules/
+package-lock.json
+package.json
+
+#Changelog
+CHANGELOG.md
