--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,6 +42,8 @@ dependencies:
   bloc: ^9.0.0
   flutter_bloc: ^9.1.1
   go_router: ^15.1.2
+  intl: ^0.20.2
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
