feat(login): metodo de autenticacao via link de email

--- a/firebase.json
+++ b/firebase.json
@@ -24,5 +24,13 @@
   },
   "emulators": {
     "singleProjectMode": true
+  },
+  "hosting": {
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
 }
