--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
-  firebase_core: ^3.13.1
+  firebase_core: ^3.15.2
   cloud_firestore: ^5.6.8
   bloc: ^9.0.0
   flutter_bloc: ^9.1.1
   go_router: ^15.1.2
   intl: ^0.20.2
   equatable: ^2.0.7
+  firebase_auth: ^5.7.0
+  shared_preferences: ^2.5.3
+  get_it: ^8.1.0
+  flashy_flushbar: ^1.4.0
+  app_links: ^6.4.0
+  firebase_dynamic_links: ^6.1.10
 
 dev_dependencies:
   flutter_test:
