--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,7 @@ dependencies:
   shared_preferences: ^2.5.3
   get_it: ^8.1.0
   flashy_flushbar: ^1.4.0
-  app_links: ^6.4.0
-  firebase_dynamic_links: ^6.1.10
+  google_sign_in: ^7.1.1
 
 dev_dependencies:
   flutter_test:
