--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   get_it: ^8.1.0
   flashy_flushbar: ^1.4.0
   google_sign_in: ^7.1.1
+  fpdart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
